--- a/src/style.scss
+++ b/src/style.scss
@@ -3,10 +3,11 @@
 $font-stack: 'Roboto', sans-serif;
 $primary-color: #666;
 $blue: #5e9dd1;
-$white:  #fff;
+$white: #fff;
 
 html,
 body {
+	position: fixed;
 	font: 100% $font-stack;
 	color: $primary-color;
 	height: 100%;
@@ -38,6 +39,7 @@ span {
 		'details minmax';
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	margin: 0 auto;
+	margin-top: 1em;
 	padding: 5px 30px;
 	border-radius: 2px;
 	width: 350px;
@@ -86,23 +88,24 @@ span {
 		margin: 1em 0 0 1em;
 	}
 }
-header{
+header {
 	background-color: $blue;
 	color: $white;
-	width: 100%;
+	width: 100vw;
+	h3 {
+		margin-left: 1em;
+		font-weight: 900;
+	}
 }
-@media only screen 
-  and (max-device-width: 640px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-	.card{
+@media only screen and (max-device-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
+	.card {
 		width: 90%;
 		box-shadow: unset;
-		&:hover{
+		&:hover {
 			box-shadow: unset;
-		}	
+		}
 	}
-	.container{
+	.container {
 		justify-content: center;
 	}
-		
 }
